@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import java.math.BigInteger;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -30,7 +31,9 @@ public class StatementBuilderTest {
   void buildsIntegerLetStatements(String type) {
     String testInput = String.format("let i: %s = 0;", type);
     StatementContext statementContext = TestHelper.parseStmt(testInput);
-    Let expected = new Let(new Identifier("i"), Type.Int.valueOf(type), new Integer(0));
+    Let expected =
+        new Let(
+            new Identifier("i"), Type.Int.valueOf(type), new IntegerLiteral(BigInteger.valueOf(0)));
     Let actual = assertInstanceOf(Let.class, statementBuilder.buildStatement(statementContext));
     assertEquals(expected, actual);
   }
@@ -39,7 +42,7 @@ public class StatementBuilderTest {
   void buildsBooleanLetStatements() {
     String testInput = "let b: bool = true;";
     StatementContext statementContext = TestHelper.parseStmt(testInput);
-    Let expected = new Let(new Identifier("b"), Type.BOOL, new Boolean(true));
+    Let expected = new Let(new Identifier("b"), Type.BOOL, new BooleanLiteral(true));
     Let actual = assertInstanceOf(Let.class, statementBuilder.buildStatement(statementContext));
     assertEquals(expected, actual);
   }
@@ -48,7 +51,8 @@ public class StatementBuilderTest {
   void buildsMutableLetStatement() {
     String testInput = "let mut x: i32 = 0;";
     StatementContext statementContext = TestHelper.parseStmt(testInput);
-    Let expected = new Let(new Identifier("x"), Type.Int.i32, new Integer(0));
+    Let expected =
+        new Let(new Identifier("x"), Type.Int.i32, new IntegerLiteral(BigInteger.valueOf(0)));
     Let actual = assertInstanceOf(Let.class, statementBuilder.buildStatement(statementContext));
     assertEquals(expected, actual);
   }
@@ -57,7 +61,8 @@ public class StatementBuilderTest {
   void buildsAssignmentStatement() {
     String testInput = "x = 5;";
     StatementContext statementContext = TestHelper.parseStmt(testInput);
-    Assignment expected = new Assignment(new Identifier("x"), new Integer(5));
+    Assignment expected =
+        new Assignment(new Identifier("x"), new IntegerLiteral(BigInteger.valueOf(5)));
     Assignment actual =
         assertInstanceOf(Assignment.class, statementBuilder.buildStatement(statementContext));
     assertEquals(expected, actual);
@@ -73,7 +78,8 @@ public class StatementBuilderTest {
   void rejectsUnsupportedStatements(String input) {
     StatementContext statementContext = TestHelper.parseStmt(input);
     assertThrows(
-        UnsupportedConstructException.class, () -> statementBuilder.buildStatement(statementContext));
+        UnsupportedConstructException.class,
+        () -> statementBuilder.buildStatement(statementContext));
   }
 
   @Test
@@ -81,15 +87,17 @@ public class StatementBuilderTest {
     String testInput = "let f: f32 = 1.0;";
     StatementContext statementContext = TestHelper.parseStmt(testInput);
     assertThrows(
-        UnsupportedConstructException.class, () -> statementBuilder.buildStatement(statementContext));
+        UnsupportedConstructException.class,
+        () -> statementBuilder.buildStatement(statementContext));
   }
 
   @Test
   void buildsReturnStatement() {
     String testInput = "return 0;";
     StatementContext statementContext = TestHelper.parseStmt(testInput);
-    Return expected = new Return(new Integer(0));
-    Return actual = assertInstanceOf(Return.class, statementBuilder.buildStatement(statementContext));
+    Return expected = new Return(new IntegerLiteral(BigInteger.valueOf(0)));
+    Return actual =
+        assertInstanceOf(Return.class, statementBuilder.buildStatement(statementContext));
     assertEquals(expected, actual);
   }
 
@@ -98,7 +106,8 @@ public class StatementBuilderTest {
     String testInput = "return;";
     StatementContext statementContext = TestHelper.parseStmt(testInput);
     assertThrows(
-        UnsupportedConstructException.class, () -> statementBuilder.buildStatement(statementContext));
+        UnsupportedConstructException.class,
+        () -> statementBuilder.buildStatement(statementContext));
   }
 
   @Test
@@ -106,7 +115,10 @@ public class StatementBuilderTest {
     String testInput = "if 1 { return 10; }";
     IfExpressionContext ifExpressionContext = TestHelper.parseIf(testInput);
     If expected =
-        new If(new Integer(1), new Block(List.of(new Return(new Integer(10)))), Optional.empty());
+        new If(
+            new IntegerLiteral(BigInteger.valueOf(1)),
+            new Block(List.of(new Return(new IntegerLiteral(BigInteger.valueOf(10))))),
+            Optional.empty());
     assertEquals(expected, statementBuilder.buildIfStatement(ifExpressionContext));
   }
 
@@ -114,9 +126,10 @@ public class StatementBuilderTest {
   void buildsIfElseStatement() {
     String testInput = "if 1 {return 10;} else { return 5; }";
     IfExpressionContext ifExpressionContext = TestHelper.parseIf(testInput);
-    Block ifBlock = new Block(List.of(new Return(new Integer(10))));
-    Block elseBlock = new Block(List.of(new Return(new Integer(5))));
-    If expected = new If(new Integer(1), ifBlock, Optional.of(elseBlock));
+    Block ifBlock = new Block(List.of(new Return(new IntegerLiteral(BigInteger.valueOf(10)))));
+    Block elseBlock = new Block(List.of(new Return(new IntegerLiteral(BigInteger.valueOf(5)))));
+    If expected =
+        new If(new IntegerLiteral(BigInteger.valueOf(1)), ifBlock, Optional.of(elseBlock));
     assertEquals(expected, statementBuilder.buildIfStatement(ifExpressionContext));
   }
 
@@ -124,10 +137,17 @@ public class StatementBuilderTest {
   void buildsIfElseIfStatement() {
     String testInput = "if 1 {return 10;} else if 2 { return 5; }";
     IfExpressionContext ifExpressionContext = TestHelper.parseIf(testInput);
-    Block ifBlock = new Block(List.of(new Return(new Integer(10))));
-    Block secondIfBlock = new Block(List.of(new Return(new Integer(5))));
-    Block elseIfBlock = new Block(List.of(new If(new Integer(2), secondIfBlock, Optional.empty())));
-    If expected = new If(new Integer(1), ifBlock, Optional.of(elseIfBlock));
+    Block ifBlock = new Block(List.of(new Return(new IntegerLiteral(BigInteger.valueOf(10)))));
+    Block secondIfBlock = new Block(List.of(new Return(new IntegerLiteral(BigInteger.valueOf(5)))));
+    Block elseIfBlock =
+        new Block(
+            List.of(
+                new If(
+                    new IntegerLiteral(BigInteger.valueOf(2)),
+                    secondIfBlock,
+                    Optional.empty())));
+    If expected =
+        new If(new IntegerLiteral(BigInteger.valueOf(1)), ifBlock, Optional.of(elseIfBlock));
     assertEquals(expected, statementBuilder.buildIfStatement(ifExpressionContext));
   }
 
@@ -135,7 +155,10 @@ public class StatementBuilderTest {
   void buildsWhileStatement() {
     String testInput = "while true { return 1; }";
     StatementContext statementContext = TestHelper.parseStmt(testInput);
-    While expected = new While(new Boolean(true), new Block(List.of(new Return(new Integer(1)))));
+    While expected =
+        new While(
+            new BooleanLiteral(true),
+            new Block(List.of(new Return(new IntegerLiteral(BigInteger.valueOf(1))))));
     While actual = assertInstanceOf(While.class, statementBuilder.buildStatement(statementContext));
     assertEquals(expected, actual);
   }
@@ -144,7 +167,7 @@ public class StatementBuilderTest {
   void buildsWhileStatementWithEmptyBody() {
     String testInput = "while true {}";
     StatementContext statementContext = TestHelper.parseStmt(testInput);
-    While expected = new While(new Boolean(true), new Block(List.of()));
+    While expected = new While(new BooleanLiteral(true), new Block(List.of()));
     While actual = assertInstanceOf(While.class, statementBuilder.buildStatement(statementContext));
     assertEquals(expected, actual);
   }
@@ -192,7 +215,8 @@ public class StatementBuilderTest {
   void rejectsUnsupportedLoops(String input) {
     StatementContext statementContext = TestHelper.parseStmt(input);
     assertThrows(
-        UnsupportedConstructException.class, () -> statementBuilder.buildStatement(statementContext));
+        UnsupportedConstructException.class,
+        () -> statementBuilder.buildStatement(statementContext));
   }
 
   @ParameterizedTest
@@ -205,14 +229,16 @@ public class StatementBuilderTest {
   void rejectsUnsupportedBreakContinue(String input) {
     StatementContext statementContext = TestHelper.parseStmt(input);
     assertThrows(
-        UnsupportedConstructException.class, () -> statementBuilder.buildStatement(statementContext));
+        UnsupportedConstructException.class,
+        () -> statementBuilder.buildStatement(statementContext));
   }
 
   @Test
   void buildsBodyBlockWithTrailingOnly() {
     String testInput = "{ return 10; }";
     BlockExpressionContext blockContext = TestHelper.parseBlock(testInput);
-    BodyBlock expected = new BodyBlock(List.of(), new Return(new Integer(10)));
+    BodyBlock expected =
+        new BodyBlock(List.of(), new Return(new IntegerLiteral(BigInteger.valueOf(10))));
     assertEquals(expected, statementBuilder.buildBodyBlock(blockContext));
   }
 
@@ -220,8 +246,10 @@ public class StatementBuilderTest {
   void buildsBodyBlock() {
     String testInput = "{ let x: i32 = 0; return 10; }";
     BlockExpressionContext blockContext = TestHelper.parseBlock(testInput);
-    Let letStmt = new Let(new Identifier("x"), Type.Int.i32, new Integer(0));
-    BodyBlock expected = new BodyBlock(List.of(letStmt), new Return(new Integer(10)));
+    Let letStmt =
+        new Let(new Identifier("x"), Type.Int.i32, new IntegerLiteral(BigInteger.valueOf(0)));
+    BodyBlock expected =
+        new BodyBlock(List.of(letStmt), new Return(new IntegerLiteral(BigInteger.valueOf(10))));
     assertEquals(expected, statementBuilder.buildBodyBlock(blockContext));
   }
 
@@ -229,7 +257,8 @@ public class StatementBuilderTest {
   void normalisesTrailingExpressionToImplicitReturn() {
     String testInput = "{ let x: i32 = 0; x }";
     BlockExpressionContext blockContext = TestHelper.parseBlock(testInput);
-    Let letStmt = new Let(new Identifier("x"), Type.Int.i32, new Integer(0));
+    Let letStmt =
+        new Let(new Identifier("x"), Type.Int.i32, new IntegerLiteral(BigInteger.valueOf(0)));
     BodyBlock expected =
         new BodyBlock(List.of(letStmt), new Return(new Variable(new Identifier("x"))));
     assertEquals(expected, statementBuilder.buildBodyBlock(blockContext));
